--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         </div>
     </header>
     <div class="navbar">
-        <a href="index.html">Home</a>
+        <a href="main.html">Home</a>
         <a class="active" href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
     </div>
