--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
         </div>
     </header>
     <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <a class="active" href="main.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact</a>
     </div>
