--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>留学相談プラットフォーム</title>
+    <title>OneChoice</title>
     <link rel="stylesheet" href="styles/style.css">
     <style>
         header {
