--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <header>
         <div class="container">
             <a href="/main.html"><img src="img/logo_transparent.png" alt="ロゴ" class="logo"></a>
-            <h1>留学相談プラットフォーム</h1>
+            <h1>留学相談プラットフォーム『OneChoice』</h1>
             <p class="tagline">海外進学を１つの選択肢に</p>
         </div>
     </header>
